# PokerSolverPro

./: README.md  STYLE_GUIDE.md  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
backend/cpp_core/: cpp_core.py
backend/python/: app.py  run_gui.py
backend/python/api/: solver.py
backend/python/core/: solver.py
cpp_core/: CMakeLists.txt
frontend/: package-lock.json  vite.config.js
frontend/poker-solver-gui/: package-lock.json  package.json
frontend/poker-solver-gui/public/: index.html
frontend/poker-solver-gui/src/: app.js
frontend/src/: App.css  App.jsx  setupTests.js
frontend/src/animations/: cardAnimations.js
frontend/src/components/: AnimatedCard.jsx  BettingControls.jsx  BurningCard.jsx  Card.css  Card.jsx  CardGallery.jsx  ChipStack.jsx  CommunityCards.jsx  PlayerHand.jsx  PlayerSeat.jsx  PokerLogic.js  PokerTable.css  PokerTable.jsx  jest.config.js  types.ts
frontend/src/components/BurningCard/: BurningCard.css
frontend/src/components/ChipStack/: ChipStack.css
frontend/src/components/ChipStack/__tests__/: ChipStack.test.js
frontend/src/context/: PokerContext.jsx  usePokerStore.js
frontend/src/hooks/: BettingControls.jsx  usePokerGame.js.jsx  usePokerSounds.js
frontend/src/stories/: ColorPalette.stories.jsx
frontend/src/styles/: colors.css  colors.test.js  global.css
frontend/src/utils/: betting.js  sounds.js  validation.js
installer/: poker_solver_pro.nsi
tests/: test_solver.py
tests/unit/: RangeInput.jsx  RangeParsingSettings.jsx
